<resources>
    <string name="app_name">chicken shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="item_image">Item Image</string>
    <string name="item_name">Item name</string>
    <string name="price">(Price per kg)</string>
    <string name="qty">kg</string>
    <string name="_00_rs">00 rs</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove">Remove Item</string>
    <string name="place_order">Place Order</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="rs">0 Rs</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_details">Enter your details.</string>
    <string name="address_fragment">Address fragment</string>
    <string name="order_fragment">Order Fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home_drawer">Home</string>
    <string name="navigation_button">navigation button</string>
    <string name="chicken_shop">Chicken Shop</string>
    <string name="top_offers">Top offers</string>
    <string name="best_seller">Best seller</string>
    <string name="slogan_2">Get fresh meat online\nat the lowest price.</string>
    <string name="menu_button">menu button</string>
    <string name="search">Search</string>
    <string name="find_your_taste_here">Find your taste here...</string>
    <string name="pick_your_favourite_flesh">Pick your favourite flesh</string>
    <string name="category_name">category_name</string>
    <string name="category_image">Category_image</string>
    <string name="title_activity_login_activity">login_activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="gallus_gallus">Gallus Gallus</string>
    <string name="password">Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_you_phone_number">Enter you phone number</string>
    <string name="verify">Verify</string>
    <string name="orders">Orders</string>
    <string name="my_cart">My cart</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="edit_username">Edit username</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Street">Street</string>
    <string name="door_no">Door no.</string>
    <string name="area">Area</string>
    <string name="district">District</string>
    <string name="pincode">Pincode</string>
    <string name="madurai">Madurai</string>

</resources>