<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/orders_nav"
            android:title="@string/orders"
            android:icon="@drawable/ic_baseline_list_24"/>

        <item
            android:id="@+id/mycart_nav"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart"/>


    </group>

    <group>
        <item
            android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profile_nav"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_baseline_account_circle_24"/>
                <item
                    android:id="@+id/logout_nav"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>

                </group>



            </menu>

        </item>
    </group>
</menu>